redid spacing fix

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -349,9 +349,9 @@
         background: url(image_path('add_tag_inactive.png'));
         background-size: 28px 28px;
         position: relative;
-        left: 228px;
+        left: 233px;
         display: inline;
-        bottom: 32px;
+        bottom: 31px;
 
         &:disabled {
           background: url(image_path('add_tag_hover.png'));
@@ -375,9 +375,9 @@
         font-size: 18px;
       }
       .other-input-text {
-        height: 32px;
+        height: 35px;
         width: 317px;
-        font-size: 12px;
+        font-size: 14px;
         background-color: #fff;
         resize: none;
         border: solid;
@@ -386,10 +386,10 @@
         border-width: 1px;
         padding: 10px 20px 0px 20px;
         border-radius: 50px;
-        padding-left: 13px;
+        padding-left: 15px;
         padding-bottom: 7px;
         margin-top:2px;
-        margin-left: 14em;
+        margin-left: 13em;
 
         .popover{
           width:200px;
